# fmp-stable-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
fmp_stable_api/: __init__.py  client.py  endpoints.py  fmp_endpoints.json  key_manager.py  mcp_server.py  rate_limiter.py  skill.md  updater.py
fmp_stable_api/gui/: __init__.py  manager.py
